[package]
name = "actions"
version = "0.0.1"
authors = ["K.J. Valencik <kjvalencik@gmail.com>"]
repository = "https://github.com/kjvalencik/actions"
edition = "2018"

[dependencies]
anyhow = "1"
actions-toolkit = { version = "=0.1.0", path = "crates/toolkit" }

[workspace]
members = [
	"crates/toolkit",
	"crates/core",
]
